--- a/src/styles/responsiveDesignTraining.css
+++ b/src/styles/responsiveDesignTraining.css
@@ -41,7 +41,8 @@
         grid-column: 1 / span 2;
     }
     #dtDescriptorDiv {
-        margin: 0;
+        /* margin: 0; */
+        
     }
     #dtDescription {
         padding-left: 5px;
